--- a/myApp/src/theme/variables.scss
+++ b/myApp/src/theme/variables.scss
@@ -24,11 +24,12 @@ $font-path: "../assets/fonts";
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
-  secondary:  #32db64,
-  danger:     #f53d3d,
+  primary:    #367fa9,
+  secondary:  #00a65a,
+  danger:     #dd4b49,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,
+  warning:    #f39c12
 );
 
 
